<resources>
    <string name="app_name">Simple Timer Widget</string>
    <string name="pauseDesc">Pause</string>
    <string name="playDesc">Play\n</string>
    <string name="resetDesc">Reset</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="set_timer">Set timer</string>
    <string name="set">Set</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hours">Hours</string>
    <string name="minutes">Minutes</string>
    <string name="seconds">Seconds</string>
    <string name="start_timer">Start Timer</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="tap_to_dismiss">Tap to dismiss</string>
    <string name="timer_permission_explanation">Please enable the alarm permission to ensure you will be notified when the timer expires.</string>
</resources>